class blocchi e about inserita base

--- a/index.html
+++ b/index.html
@@ -36,14 +36,41 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
+        <img src="..." alt="..." class="rounded-circle">
         <h1>Navbar example</h1>
         <p>This example is a quick exercise to illustrate how the default, static navbar and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-        <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
-        </p>
+
       </div>
 
     </div>
     <!-- /container -->
+    <main>
+    <section class="boxes">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">Portfolio</div>
+          <div class="col-xs-12 col-sm-6 col-md-4">img</div>
+          <div class="col-xs-12 col-sm-6 col-md-4">img</div>
+          <div class="col-xs-12 col-sm-6 col-md-4">img</div>
+          <div class="col-xs-12 col-sm-6 col-md-4">img</div>
+          <div class="col-xs-12 col-sm-6 col-md-4">img</div>
+          <div class="col-xs-12 col-sm-6 col-md-4">img</div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">About</div>
+          <div class="col-xs-12 col-md-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+          <div class="col-xs-12 col-md-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+          <div class="col-xs-12"><button type="button" class="btn btn-outline-success">Download</button></div>
+
+        </div>
+      </div>
+    </section>
+    </main>
   </body>
 </html>
