--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="header_top bg_light_blue">
         <div class="container">
           <div class="row">
-            <div class="col-xs-6"> START BOOTSTRAP</div>
+            <div class="col-xs-6 header_left"> START BOOTSTRAP</div>
             <div class="col-xs-6 text-right">
               <!-- navigation -->
               <nav class="visible-md visible-lg">
