inser stella portfolio

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
         <div class="jumbo_text">
         <img src="img/avataaars.svg" alt="">
           <h1>START BOOTSTRAP</h1>
+          <div class="jumbo_star">
+            <i class="fas fa-star"></i>
+          </div>
+          <p>Graphic-Web Designer-Illustrator</p>
+
 
         </div>
       </div>
@@ -57,7 +62,10 @@
     <main>
       <!-- section portfolio -->
       <section id="portfolio" class="p_top_80 p_bottom_80">
-        <h2 class="text-center text-uppercase">Lorem</h2>
+        <h2 class="text-center text-uppercase">PORFOLIO</h2>
+        <div class="porfolio_star">
+          <i class="fas fa-star"></i>
+        </div>
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-4">
