inser fawsome button e testo about

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
               <!-- navigation -->
               <nav class="visible-md visible-lg">
                 <ul class="list-inline">
-                  <li>PORTFOLIO</li>
-                  <li>ABOUT</li>
-                  <li>CONTACT</li>
+                <li>PORTFOLIO</li>
+                <li>ABOUT</li>
+                <li>CONTACT</li>
 
                 </ul>
               </nav>
@@ -105,20 +105,22 @@
 
       <!-- section about -->
       <section id="about" class="p_top_80 p_bottom_80 bg_green">
-        <h2 class="text-center text-uppercase">About</h2>
+
+        <h2 class="text-center text-uppercase">ABOUT</h2>
         <div class="wrapper_small">
           <div class="container-fluid">
             <div class="row">
               <div class="col-xs-12 col-md-6">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Freelancer is a free bootstrap theme created by Start Bootstrap.The download includes the complete source files including HTML,CSS,and JavaScript as well as optional SASS stylesheets for easy customization.
               </div>
               <div class="col-xs-12 col-md-6">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                You can create your own custom avatar for the masthead,change the icon in the dividers,and add your email address to the  contact form to make it fully functional!
               </div>
               <div class="col-xs-12 text-center">
-                <button type="button" class="btn btn-default btn-lg">
-                  <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star
-                </button>
+
+                <button type="button" class="btn btn-default btn-lg"> <i class="fas fa-download"></i>Free Download!</button>
+
+
               </div>
             </div>
           </div>
