inline mensu e start inser a link

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <div class="header_top bg_light_blue">
         <div class="container">
           <div class="row">
-            <div class="col-xs-6 header_left"> START BOOTSTRAP</div>
+            <div class="col-xs-6 header_left"><a id="start" href="#">START BOOTSTRAP</a></div>
             <div class="col-xs-6 text-right">
               <!-- navigation -->
               <nav class="visible-md visible-lg">
                 <ul class="list-inline">
-                <li>PORTFOLIO</li>
-                <li>ABOUT</li>
-                <li>CONTACT</li>
+                <li><a href="#">PORTFOLIO</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">CONTACT</a></li>
 
                 </ul>
               </nav>
