footer top bottom

--- a/index.html
+++ b/index.html
@@ -135,10 +135,33 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-xs-12">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </div>
+                Name
             </div>
-          </div>
+            <hr>
+            </div>
+            <div class="row">
+              <div class="col-xs-12">
+                Address
+            </div>
+            <hr>
+            </div>
+            <div class="row">
+              <div class="col-xs-12">
+                Phone number
+            </div>
+            <hr>
+            </div>
+            <div class="row">
+              <div class="col-xs-12">
+                Message
+            </div>
+            <hr>
+            </div>
+
+            <div class="row">
+              <button type="button" class="btn btn-success">Send</button>
+            </div>
+
         </div>
       </section>
       <!-- /section contact -->
@@ -152,13 +175,25 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-md-4">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <h3>Location</h3>
+              <p>2215 John Daniel Drive Clark, MO 65243</p>
+
             </div>
             <div class="col-xs-12 col-md-4">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <h3>AROUND THE WEB</h3>
+              <p><ul>
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="#"><i class="fas fa-basketball-ball"></i></a></li>
+              </ul></p>
             </div>
             <div class="col-xs-12 col-md-4">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <h3>ABOUT FREELANCER</h3>
+              <p>Freelance is a free to use, MIT licensed Bootstrap theme created by</p>
+              <a id="start_bootstrap" href="#">Start Bootstrap.</a>
+
+
             </div>
           </div>
         </div>
