--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
               <!-- /navigation -->
               <!-- hamburger -->
               <div class="visible-xs visible-sm">
-                <button type="button" class="btn btn-default" aria-label="Left Align">
-                  <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                <button type="button" class="btn btn-success " aria-label="Left Align">
+                  Menu<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
                 </button>
               </div>
               <!-- /hamburger -->
@@ -70,31 +70,49 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="box_portfolio">
+                <div class="overlay">
+                  <i class="fas fa-plus"></i>
+                </div>
                 <img src="img/cabin.png" alt="">
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="box_portfolio">
+                <div class="overlay">
+                  <i class="fas fa-plus"></i>
+                </div>
                 <img src="img/cake.png" alt="">
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="box_portfolio">
+                <div class="overlay">
+                  <i class="fas fa-plus"></i>
+                </div>
                 <img src="img/circus.png" alt="">
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="box_portfolio">
+                <div class="overlay">
+                  <i class="fas fa-plus"></i>
+                </div>
                 <img src="img/game.png" alt="">
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="box_portfolio">
+                <div class="overlay">
+                  <i class="fas fa-plus"></i>
+                </div>
                 <img src="img/safe.png" alt="">
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="box_portfolio">
+                <div class="overlay">
+                  <i class="fas fa-plus"></i>
+                </div>
                 <img src="img/submarine.png" alt="">
               </div>
             </div>
@@ -106,10 +124,16 @@
       <!-- section about -->
       <section id="about" class="p_top_80 p_bottom_80 bg_green">
 
-        <h2 class="text-center text-uppercase">ABOUT</h2>
         <div class="wrapper_small">
           <div class="container-fluid">
             <div class="row">
+              <div class="col-xs-12 text-center">
+                <h2 class="text-uppercase">ABOUT</h2>
+                <div class="dec_star">
+                  <i class="fas fa-star"></i>
+                </div>
+              </div>
+            </div>
               <div class="col-xs-12 col-md-6">
                 Freelancer is a free bootstrap theme created by Start Bootstrap.The download includes the complete source files including HTML,CSS,and JavaScript as well as optional SASS stylesheets for easy customization.
               </div>
@@ -118,7 +142,7 @@
               </div>
               <div class="col-xs-12 text-center">
 
-                <button type="button" class="btn btn-default btn-lg"> <i class="fas fa-download"></i>Free Download!</button>
+                <button type="button" class="btn btn-default btn-lg m_top_30"> <i class="fas fa-download"></i>Free Download!</button>
 
 
               </div>
