--- a/index.html
+++ b/index.html
@@ -154,15 +154,22 @@
 
       <!-- section contact -->
       <section id="contact" class="p_top_80 p_bottom_80">
-        <h2 class="text-center text-uppercase">Contact me</h2>
+
         <div class="wrapper_small">
           <div class="container-fluid">
             <div class="row">
+              <div class="col-xs-12 text-center">
+                <h2 class="text-uppercase">Contact Me</h2>
+                <div class="dec_star_dark">
+                  <i class="fas fa-star"></i>
+                </div>
+              </div>
+              </div>
               <div class="col-xs-12">
                 Name
             </div>
             <hr>
-            </div>
+
             <div class="row">
               <div class="col-xs-12">
                 Address
