--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="jumbo bg_green">
         <img src="" alt="">
         <div class="jumbo_text">
-        <img src="img/avataaars.svg" alt="">
+        <img class="logo" src="img/avataaars.svg" alt="">
           <h1>START BOOTSTRAP</h1>
           <div class="jumbo_star">
             <i class="fas fa-star"></i>
@@ -165,9 +165,12 @@
                 </div>
               </div>
               </div>
-              <div class="col-xs-12">
-                Name
-            </div>
+              <div class="row">
+                <div class="col-xs-12">
+                  Name
+              </div>
+              </div>
+
             <hr>
 
             <div class="row">
